# quadratic_equation

./: Makefile  README.txt  info.txt
example/: Makefile  README.txt
example/src/: CMakeLists.txt  main.c
include/: complex_number.h  quadratic_equation.h
src/: CMakeLists.txt  complex_number.c  quadratic_equation.c
tests/: Makefile  README.txt
tests/src/: CMakeLists.txt  tests_interface.c  tests_interface.h  tests_main.c  tests_quadratic_equation.c  tests_quadratic_equation.h
